OO-7000: More filters in appointments list